# fpga_first_steps

./: .gitignore  CMakeLists.txt  Notes.txt
LCD1602/: LCD1602.sv
LCD1602/modules/: spi_slave.sv
alu_verilate/: .gtkwaverc  CMakeLists.txt  Makefile  README.md  alu.sv  tb_alu.cpp
complex_clock/: .gtkwaverc  CMakeLists.txt  Makefile  clock.sv  tb_clock.cpp
complex_clock/modules/: Counter.sv  SEG7_LUT.v  split_output.v
fifo/: FIFO_3word_0_latency.sv  FIFO_3word_0_latency_v3.1.sv  fifo.sv
memory_latch/: memory_latch.sv  tb_memory_latch.sv
oled_spi/: CMakeLists.txt  Makefile  oled_spi.sv  tb_oled_spi.cpp
oled_spi/modules/: noop_spi.v
scripts/: scrape-apache-directory-index.sh
simple_clock/: CMakeLists.txt  Makefile  counter_foo.sv  tb_counter_foo.cpp
simple_sram/: .gtkwaverc  CMakeLists.txt  Makefile  RamChip.v  simple_sram.sv  tb_simple_sram.cpp
spi_slave/: spi_slave.sv
uart_verilog/: Makefile  uart_tb.do  uart_tb.tcl
uart_verilog/rtl/: uart_rx.v  uart_tb.v  uart_tx.v
uart_vhdl/: UART_RX.vhd
